# emacs-dynamic-module

modules/modt-basic/: modt-basic.c
modules/modt-c++/: .gitignore  Makefile  Makefile.am  configure.ac  emacs-module.cpp  emacs-module.hpp  modt-c++.cpp  test.el  test.sh
modules/modt-c++/m4/: .gitignore
modules/modt-globref/: modt-globref.c
modules/modt-nonlocal/: Makefile  modt-nonlocal.c  test.el
modules/modt-string/: modt-string.c
src/: emacs_module.h  eval.c  lisp.h  module.c
